# HSA_Project

./: README.md  set_permissions.sh  start a test.md  tmp.md
.devcontainer/: devcontainer.json
Rviz_ws/: Readme.md  ekf.yaml  encoder_node1.py  imu_node.py  lidar_node.py  slam_localization_launch.py
Rviz_ws/src/: basicsetup.md
Rviz_ws/src/sensor_publisher/: package.xml  setup.py
Rviz_ws/src/sensor_publisher/config/: ekf.yaml
Rviz_ws/src/sensor_publisher/launch/: imu_launch.py  slam_localization_launch.py
Rviz_ws/src/sensor_publisher/sensor_publisher/: encoder.py  encoder_node.py  encoder_node1.py  encoder_to_odom_node.py  fusion_node.py  imu.py  imu_node.py  lidar_node.py  listener.py  path_publisher.py  simple_map_publisher.py
docs/hardware/: Core_Hardware_Components.csv  lidar.md  motor-pi.md
docs/hardware/imu/: imu_stream.py
docs/proposal/: project_proposal.md
report/: main.tex  report.tex
ros2_slam_ws/: Readme.md
ros2_slam_ws/src/: basicsetup.md
ros2_slam_ws/src/geographic_info/: readme.md
ros2_slam_ws/src/robot_localization/: readme.md
ros2_slam_ws/src/sensor_publisher/: setup.cfg  setup.py
ros2_slam_ws/src/sensor_publisher/config/: ekf.yaml
ros2_slam_ws/src/sensor_publisher/launch/: slam_localization_launch.py
ros2_slam_ws/src/sensor_publisher/sensor_publisher/: encoder_node1.py  imu_node.py  lidar_node.py  path_publisher.py  simple_map_publisher.py
ros2_slam_ws/src/slam_toolbox/: readme.md
skin_tutorial/: deploy-docker-image.md  install-docker.md  install-vscode.md  readme.md  ros-skin-driver-services.md  skin-udev-rules.md
skin_tutorial/src/skin_tutorial/: CMakeLists.txt  package.xml
skin_tutorial/src/skin_tutorial/launch/: full_config.launch  load_and_view_patch.launch  rviz.launch
skin_tutorial/src/skin_tutorial/launch/configs/: default.xml
skin_tutorial/src/skin_tutorial/src/Applications/: main_load_and_view_patch_tut.cpp
test_mcu_ws/: README.md
test_mcu_ws/arduino_integrated/: platformio.ini
test_mcu_ws/arduino_integrated/include/: lidar_sensor.h  motor_control.h
test_mcu_ws/arduino_integrated/src/: lidar_sensor.cpp  main.cpp  motor_control.cpp
test_skin_ws/: .gitignore  README.md
test_skin_ws/launch/configs/: default.xml
test_skin_ws/launch/skin_force_publisher/: force_publisher.launch
test_skin_ws/src/lidar_publisher/: CMakeLists.txt  package.xml  readme.md
test_skin_ws/src/lidar_publisher/launch/: lidar_publisher.launch
test_skin_ws/src/lidar_publisher/scripts/: lidar_publisher_node.py
test_skin_ws/src/skin_force_publisher/: CMakeLists.txt  package.xml  readme.md
test_skin_ws/src/skin_force_publisher/arduino/: arduino_motor.ino
test_skin_ws/src/skin_force_publisher/launch/: force_publisher.launch
test_skin_ws/src/skin_force_publisher/msg/: FourCellForces.msg
test_skin_ws/src/skin_force_publisher/scripts/: motor_control.py  motor_test.back  readme.md
test_skin_ws/src/skin_force_publisher/src/: force_publisher_node.cpp
unit_tests/test_lidar/test lidar/: platformio.ini
unit_tests/test_lidar/test lidar/src/: main.cpp  test_lidar.code-workspace
