<?xml version="1.0"?>
<package format="2">
  <name>lidar_publisher</name>
  <version>0.1.0</version>
  <description>ROS node for publishing LIDAR Lite v3 distance data from Arduino</description>
  
  <maintainer email="lukas@example.com">Lukas</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-serial</exec_depend>
</package>