<?xml version="1.0"?>
<package format="2">
  <name>skin_force_publisher</name>
  <version>0.0.0</version>
  <description>Publishes averaged force data from 4 skin cells</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies (needed during compilation) -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tum_ics_skin_msgs</build_depend>
  <build_depend>tum_ics_skin_bridge</build_depend>
  <build_depend>tum_ics_skin_descr</build_depend>
  <build_depend>eigen</build_depend>
  
  <!-- Execution dependencies (needed at runtime) -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tum_ics_skin_msgs</exec_depend>
  <exec_depend>tum_ics_skin_bridge</exec_depend>
  <exec_depend>tum_ics_skin_descr</exec_depend>
  <exec_depend>eigen</exec_depend>
</package>